--- a/addons/zombie-plague-special/addons/amxmodx/configs/plugins-zplague.ini
+++ b/addons/zombie-plague-special/addons/amxmodx/configs/plugins-zplague.ini
@@ -14,6 +14,19 @@ zpsp_main/zombie_plague_special_45.amxx debug
 ; ========================
 zpsp_special_class/zpsp_special_class_alien.amxx debug
 zpsp_special_class/zpsp_special_class_morpheus.amxx debug
+zpsp_special_class/zpsp_special_class_antidoter.amxx
+zpsp_special_class/zpsp_special_class_chuck_norris.amxx
+zpsp_special_class/zpsp_special_class_dog.amxx
+zpsp_special_class/zpsp_special_class_grenadier.amxx
+zpsp_special_class/zpsp_special_class_pain.amxx
+zpsp_special_class/zpsp_special_class_plasma.amxx
+zpsp_special_class/zpsp_special_class_priest.amxx
+zpsp_special_class/zpsp_special_class_raptor.amxx
+zpsp_special_class/zpsp_special_class_shadow.amxx
+zpsp_special_class/zpsp_special_class_sonic.amxx
+zpsp_special_class/zpsp_special_class_thanos.amxx
+zpsp_special_class/zpsp_special_class_xiter.amxx
+
 
 ; ========================
 ; --> Zombie Classes
@@ -32,8 +45,32 @@ zpsp_gamemodes/zp_game_mode_assassin_vs_sniper.amxx debug
 zpsp_gamemodes/zp_game_mode_nightmare.amxx debug
 zpsp_gamemodes/zpsp_game_mode_remix.amxx debug
 zpsp_gamemodes/zpsp_game_mode_synapsis.amxx debug
+zpsp_gamemodes/zpsp_gamemode_canibal.amxx
+zpsp_gamemodes/zpsp_gamemode_deathmatch.amxx
+zpsp_gamemodes/zpsp_gamemode_gravity.amxx
+zpsp_gamemodes/zpsp_gamemode_gvb.amxx
+zpsp_gamemodes/zpsp_gamemode_hotpotato.amxx
+zpsp_gamemodes/zpsp_gamemode_nemesis_Xtreme.amxx
+zpsp_gamemodes/zpsp_gamemode_shadow_vs_sonic.amxx
+zpsp_gamemodes/zpsp_gamemode_tag.amxx
+zpsp_gamemodes/
 
 ; ========================
 ; --> Extra Itens
 ; ========================
 ; zpsp_itens/aaaaa.amxx debug (Example)
+zpsp_xp_system.amxx
+zpsp_xp_upgrade_ammo.amxx
+zpsp_xp_upgrade_damage.amxx
+zpsp_xp_upgrade_dodge.amxx
+zpsp_xp_upgrade_elemental_dodge.amxx
+zpsp_xp_upgrade_elemental_shoot.amxx
+zpsp_xp_upgrade_gravity.amxx
+zpsp_xp_upgrade_grenade.amxx
+zpsp_xp_upgrade_health.amxx
+zpsp_xp_upgrade_knockback.amxx
+zpsp_xp_upgrade_parachute.amxx
+zpsp_xp_upgrade_precision.amxx
+zpsp_xp_upgrade_protection.amxx
+zpsp_xp_upgrade_reload.amxx
+zpsp_xp_upgrade_speed.amxx
